--- a/src/components/Views/ShelfBasic/Product.css
+++ b/src/components/Views/ShelfBasic/Product.css
@@ -21,6 +21,14 @@
   box-shadow: 0px 10px 10px -10px rgba(0,0,0,0.25);
 }
 
+.vshop-product-list-item button {
+  background: #333;
+  color: #fff;
+  height: unset;
+  font-size: 0.75rem;
+  padding: 10px;
+}
+
 .vshop-product-list-image {
   width: 101%;
   margin: 0 auto;
