--- a/src/index.css
+++ b/src/index.css
@@ -24,3 +24,11 @@ h6,
 button {
   margin: 0 0 1rem 0;
 }
+
+button {
+  height: 35px;
+  font-size: 1rem;
+  font-weight: bold;
+  border: none;
+  padding: 5px 15px;
+}
