--- a/src/components/Views/ShelfBasic/_Product.css
+++ b/src/components/Views/ShelfBasic/_Product.css
@@ -37,6 +37,15 @@
   position: relative;
 }
 
+.vshop-product-list-image a {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 2;
+}
+
 .vshop-product-list-image img {
   top: 0;
   left: -1px;
